--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
 <body>
     <div id="app"></div>
     <script src="./dist/build.js"></script>
+    <script>    
+    (function() {
+    if('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('./dist/service-worker.js');
+    }
+    })();
+    </script>
 </body>
 
 </html>
