trying to make service worker work

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <script>    
     (function() {
     if('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('./service-worker.js');
+        navigator.serviceWorker.register('./pomodoro/dist/service-worker.js');
     }
     })();
     </script>
