trying without sw-precache plugin

--- a/index.html
+++ b/index.html
@@ -30,11 +30,22 @@
     <div id="app"></div>
     <script src="./dist/build.js"></script>
     <script>    
-    (function() {
-    if('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('./dist/service-worker.js');
+    if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/pomodoro/service-worker.js', { scope: '/pomodoro/' }).then(function(reg) {
+        
+        if(reg.installing) {
+        console.log('Service worker installing');
+        } else if(reg.waiting) {
+        console.log('Service worker installed');
+        } else if(reg.active) {
+        console.log('Service worker active');
+        }
+        
+    }).catch(function(error) {
+        // registration failed
+        console.log('Registration failed with ' + error);
+    });
     }
-    })();
     </script>
 </body>
 
